--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
+      - name: Run script
+        uses: matlab-actions/run-command@v2
+        with:
+          command: myscript
       - name: Run tests
         uses: matlab-actions/run-tests@v2
         with:
